Map details: Fix z-index stacking problems.

--- a/app/assets/stylesheets/common/_header.css.scss
+++ b/app/assets/stylesheets/common/_header.css.scss
@@ -29,7 +29,7 @@ header {
 
   .map & {
     position: fixed;
-    z-index: 1000;
+    z-index: 3000;
     width: 100%;
     background: rgba($charcoal, 0.85);
   }
